--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "delorean",
   "main": "./lib/delorean",
   "version": "0.1.0",
-  "description": "You miss IntelliJ jumps in cursor history?\n Delorean will help You jump in history of Your editions",
+  "description": "You miss IntelliJ jumps in cursor history?\n Delorean will help You jump in history of Your editions. Even between different files",
   "commands": {
     "atom-workspace": "delorean:forward"
   },
